// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vue/Form > renders correctly - with active step 1`] = `
<form
  class="perseid-form"
  id="test"
>
  <div
    class="perseid-form__steps"
  >
    
    
    <div
      id="default-step"
      name="step"
    >
      {"step":{"path":"start","fields":[]},"engine":"&lt;Engine&gt;","setActiveStep":"&lt;Function&gt;","useSubscription":"&lt;Function&gt;"}
    </div>
    <div
      id="default-step"
      name="step"
    >
      {"step":{"path":"end","fields":[]},"engine":"&lt;Engine&gt;","setActiveStep":"&lt;Function&gt;","useSubscription":"&lt;Function&gt;"}
    </div>
    
    
    <!--v-if-->
  </div>
</form>
`;

exports[`vue/Form > renders correctly 1`] = `
<form
  class="perseid-form"
  id="test"
>
  <div
    class="perseid-form__steps"
  >
    
    
    <div
      class="perseid-form__step perseid-form__step----[object Object]"
      id="start"
      name="step"
    >
      <div
        class="perseid-form__step__fields"
      >
        <!--
      Key is composed of both step and field ids, in order to ensure each field is correctly reset
      when user changes his journey in previous steps.
    -->
        
        
      </div>
    </div>
    <div
      class="perseid-form__step perseid-form__step----[object Object]"
      id="end"
      name="step"
    >
      <div
        class="perseid-form__step__fields"
      >
        <!--
      Key is composed of both step and field ids, in order to ensure each field is correctly reset
      when user changes his journey in previous steps.
    -->
        
        
      </div>
    </div>
    
    
    <!--v-if-->
  </div>
</form>
`;
